--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -98,7 +98,7 @@
     <a href="dashboard.html" onclick="loadSection('dashboard')">📊 Dashboard</a>
     <a href="services-dash.html" onclick="loadSection('services')">🛠️ Manage Services</a>
     <a href="#" onclick="loadSection('products')">🛒 Manage Products</a>
-    <a href="#" onclick="loadSection('users')">👤 Manage Users</a>
+    <a href="users.html" onclick="loadSection('users')">👤 Manage Users</a>
     <a href="#" onclick="loadSection('analytics')">📈 Analytics</a>
   </div>  <div class="main" id="mainContent">
     <h1>Welcome to Admin Dashboard</h1>
