--- a/privacy.html
+++ b/privacy.html
@@ -237,7 +237,7 @@
         <li><a href="privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
         <li><a href="terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
         <li><a href="cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
-        <li><a href="contact-us.html" style="color: #fff; text-decoration: none;">Contact Us</a></li>
+        <li><a href="contact.html" style="color: #fff; text-decoration: none;">Contact Us</a></li>
       </ul>
     </div>
 
