--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raghuvanshi Healthcare</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Raghuvanshi Health Care</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Raghuvanshi Health Care - Trusted medical services and equipment.">
+  <meta name="author" content="Raghuvanshi Health Care">
+
+  <!-- Favicon Icons for All Devices -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-512x512.png">
+
+  <!-- PWA Manifest (Progressive Web App) -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- Theme for mobile browsers -->
+  <meta name="theme-color" content="#ffffff">
   </head>
   </head>
 <body>
