--- a/index.html
+++ b/index.html
@@ -1,30 +1,61 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <!-- Basic Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Raghuvanshi Healthcare</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Raghuvanshi Health Care</title>
+  <meta name="description" content="Raghuvanshi Health Care – Trusted medical services and equipment." />
+  <meta name="author" content="Raghuvanshi Health Care" />
 
-  <!-- SEO -->
-  <meta name="description" content="Raghuvanshi Health Care - Trusted medical services and equipment.">
-  <meta name="author" content="Raghuvanshi Health Care">
+  <!-- Favicon & Icons -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-512x512.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
 
-  <!-- Favicon Icons for All Devices -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-512x512.png">
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="application-name" content="Raghuvanshi Health Care" />
+  <meta name="apple-mobile-web-app-title" content="Raghuvanshi Health Care" />
 
-  <!-- PWA Manifest (Progressive Web App) -->
-  <link rel="manifest" href="manifest.json">
+  <!-- Open Graph Meta Tags (for social sharing and Google preview) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Raghuvanshi Health Care" />
+  <meta property="og:description" content="Trusted medical services and equipment." />
+  <meta property="og:image" content="https://yourdomain.com/images/og-image.jpg" />
+  <meta property="og:url" content="https://yourdomain.com" />
 
-  <!-- Theme for mobile browsers -->
-  <meta name="theme-color" content="#ffffff">
-  </head>
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Raghuvanshi Health Care" />
+  <meta name="twitter:description" content="Trusted medical services and equipment." />
+  <meta name="twitter:image" content="https://yourdomain.com/images/og-image.jpg" />
+
+  <!-- JSON-LD Structured Data for Brand and Social Profile -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Raghuvanshi Health Care",
+    "url": "https://yourdomain.com",
+    "logo": "https://yourdomain.com/images/favicon-192x192.png",
+    "sameAs": [
+      "https://www.instagram.com/yourprofile",
+      "https://www.facebook.com/yourpage",
+      "https://www.linkedin.com/company/yourcompany",
+      "https://wa.me/918824187767"
+    ]
+  }
+  </script>
+
+  <!-- External CSS (e.g., Swiper) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+</head>
 <body>
 <link rel="stylesheet" href="index.css">
     <header>
