--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -27,14 +27,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Raghuvanshi Health Care" />
   <meta property="og:description" content="Trusted medical services and equipment." />
-  <meta property="og:image" content="https://yourdomain.com/images/og-image.jpg" />
-  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="https://raghuvanshihealthcare.com/images/og-image.jpg" />
+  <meta property="og:url" content="https://raghuvanshihealthcare.com" />
 
   <!-- Twitter Card Meta -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Raghuvanshi Health Care" />
   <meta name="twitter:description" content="Trusted medical services and equipment." />
-  <meta name="twitter:image" content="https://yourdomain.com/images/og-image.jpg" />
+  <meta name="twitter:image" content="https://raghuvanshihealthcare.com/images/og-image.jpg" />
 
   <!-- JSON-LD Structured Data for Brand and Social Profile -->
   <script type="application/ld+json">
@@ -42,8 +42,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Raghuvanshi Health Care",
-    "url": "https://yourdomain.com",
-    "logo": "https://yourdomain.com/images/favicon-192x192.png",
+    "url": "https://raghuvanshihealthcare.com",
+    "logo": "https://raghuvanshihealthcare.com/images/favicon-192x192.png",
     "sameAs": [
       "https://www.instagram.com/yourprofile",
       "https://www.facebook.com/yourpage",
