--- a/index.html
+++ b/index.html
@@ -1,59 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Basic Meta -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Raghuvanshi Health Care</title>
-  <meta name="description" content="Raghuvanshi Health Care – Trusted medical services and equipment." />
-  <meta name="author" content="Raghuvanshi Health Care" />
 
-  <!-- Favicon & Icons -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192x192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-512x512.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+  <title>Raghuvanshi Health Care</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Raghuvanshi Health Care - Trusted medical services and equipment.">
+  <meta name="author" content="Raghuvanshi Health Care">
+
+  <!-- Favicons -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="/images/favicon-64x64.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="/images/favicon-256x256.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/images/favicon-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#ffffff" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="application-name" content="Raghuvanshi Health Care" />
-  <meta name="apple-mobile-web-app-title" content="Raghuvanshi Health Care" />
+  <link rel="manifest" href="/manifest.json">
 
-  <!-- Open Graph Meta Tags (for social sharing and Google preview) -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Raghuvanshi Health Care" />
-  <meta property="og:description" content="Trusted medical services and equipment." />
-  <meta property="og:image" content="https://raghuvanshihealthcare.com/images/og-image.jpg" />
-  <meta property="og:url" content="https://raghuvanshihealthcare.com" />
+  <!-- Theme Color for Mobile -->
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- Twitter Card Meta -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Raghuvanshi Health Care" />
-  <meta name="twitter:description" content="Trusted medical services and equipment." />
-  <meta name="twitter:image" content="https://raghuvanshihealthcare.com/images/og-image.jpg" />
+  <!-- Web App Title for Touch -->
+  <meta name="apple-mobile-web-app-title" content="Raghuvanshi Health Care">
 
-  <!-- JSON-LD Structured Data for Brand and Social Profile -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Raghuvanshi Health Care",
-    "url": "https://raghuvanshihealthcare.com",
-    "logo": "https://raghuvanshihealthcare.com/images/favicon-192x192.png",
-    "sameAs": [
-      "https://www.instagram.com/yourprofile",
-      "https://www.facebook.com/yourpage",
-      "https://www.linkedin.com/company/yourcompany",
-      "https://wa.me/918824187767"
-    ]
-  }
-  </script>
-
-  <!-- External CSS (e.g., Swiper) -->
+  <!-- Optional Swiper CSS if used -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 </head>
 <body>
