--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <meta name="author" content="Raghuvanshi Health Care">
 
   <!-- Favicons -->
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="/images/favicon-64x64.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicon-192x192.png">
-  <link rel="icon" type="image/png" sizes="256x256" href="/images/favicon-256x256.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/images/favicon-512x512.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="images/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="images/favicon-64x64.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192x192.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="images/favicon-256x256.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json">
