--- a/index.html
+++ b/index.html
@@ -11,27 +11,12 @@
   <meta name="author" content="Raghuvanshi Health Care">
 
   <!-- Favicons -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="48x48" href="images/favicon-48x48.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="images/favicon-64x64.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192x192.png">
-  <link rel="icon" type="image/png" sizes="256x256" href="images/favicon-256x256.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="images/favicon-512x512.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-
-  <!-- Web App Manifest -->
-  <link rel="manifest" href="/manifest.json">
-
-  <!-- Theme Color for Mobile -->
-  <meta name="theme-color" content="#ffffff">
-
-  <!-- Web App Title for Touch -->
-  <meta name="apple-mobile-web-app-title" content="Raghuvanshi Health Care">
-
-  <!-- Optional Swiper CSS if used -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+  he following code in the <head> section of your pages:
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
 <link rel="stylesheet" href="index.css">
