--- a/index.html
+++ b/index.html
@@ -234,99 +234,150 @@
     </div>
   </div>
   
-
 <section class="partners-section">
-  <h2>Our Trusted Partners</h2>
-  <p>We proudly collaborate with renowned organizations who share our commitment to care.</p>
-  
-  <a href="partners.html" class="read-more-btn">Read More ›</a>
-  
-  <div class="swiper-container-wrapper">
-    <div class="swiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="images/partner1" alt="Logo 1"></div>
-        <div class="swiper-slide"><img src="images/partner2" alt="Logo 2"></div>
-        <div class="swiper-slide"><img src="images/partner3" alt="Logo 3"></div>
-        <div class="swiper-slide"><img src="images/partner4" alt="Logo 4"></div>
-        <div class="swiper-slide"><img src="images/partner5" alt="Logo 5"></div>
-        <div class="swiper-slide"><img src="images/partner6" alt="Logo 6"></div>
-  
-</section>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script>
-  const swiper = new Swiper('.swiper', {
-    slidesPerView: 3,
-    spaceBetween: 24,
-    loop: true,
-    autoplay: {
-      delay: 1800,
-      disableOnInteraction: false,
-    },
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
-    },
-    breakpoints: {
-      0: {
-        slidesPerView: 1,
-      },
-      600: {
-        slidesPerView: 2,
-      },
-      900: {
-        slidesPerView: 3,
-      },
-    }
-  });
-</script>
+  <h2>Our Partners</h2>
 
-<section class="testimonials">
-  <h2>Happy Customers</h2>
-  <p class="description">
-    Don't simply consider our word for it, hear it from our happy customers what they have to say about their experience with Raghuvanshi Healthcare.
-  </p>
-
-  <div class="swiper">
+  <div class="swiper mySwiper">
     <div class="swiper-wrapper">
+      <!-- Partner 1 -->
       <div class="swiper-slide">
-        <p class="testimonial-text">"Amazing care and very professional staff. Highly recommend!"</p>
-        <p class="testimonial-author">– Priya S.</p>
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo1" alt="Partner 1"/>
+          <span>Partner One</span>
+        </div>
       </div>
+
+      <!-- Partner 2 -->
       <div class="swiper-slide">
-        <p class="testimonial-text">"They provided round-the-clock attention to my father. Truly grateful!"</p>
-        <p class="testimonial-author">– Rajeev M.</p>
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo2" alt="Partner 2"/>
+          <span>Partner Two</span>
+        </div>
       </div>
+
+      <!-- Partner 3 -->
       <div class="swiper-slide">
-        <p class="testimonial-text">"Exceptional service and polite caregivers. Will use again."</p>
-        <p class="testimonial-author">– Neha K.</p>
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo3" alt="Partner 3"/>
+          <span>Partner Three</span>
+        </div>
       </div>
+
+      <!-- Partner 4 -->
+      <div class="swiper-slide">
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo4" alt="Partner 4"/>
+          <span>Partner Four</span>
+        </div>
+      </div>
+
+      <!-- Add more partners as needed -->
     </div>
   </div>
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script>
-  new Swiper('.swiper', {
+  const swiper = new Swiper('.mySwiper', {
+    slidesPerView: 1.3,
+    spaceBetween: 20,
     loop: true,
+    speed: 700,
     autoplay: {
-      delay: 3500,
+      delay: 2500,
       disableOnInteraction: false,
     },
     grabCursor: true,
-    slidesPerView: 1,
-    spaceBetween: 30,
-    allowTouchMove: true,
+    centeredSlides: false,
     breakpoints: {
+      480: {
+        slidesPerView: 2.2,
+      },
       768: {
-        slidesPerView: 1,
+        slidesPerView: 3.2,
       },
       1024: {
-        slidesPerView: 1,
+        slidesPerView: 4.2,
       }
     }
   });
 </script>
 
+
+<!-- Testimonial Section -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+<section class="testimonial-section">
+  <h2>What Our Patients Say</h2>
+  <div class="swiper testimonial-swiper">
+    <div class="swiper-wrapper">
+
+      <!-- Testimonial Card 1 -->
+      <div class="swiper-slide testimonial-card">
+        <div class="testimonial-content">
+          <p>"The care and attention I received was beyond amazing. Highly recommended!"</p>
+          <div class="testimonial-author">
+            <img src="https://i.pravatar.cc/100?img=1" alt="Patient Photo" />
+            <div>
+              <h4>Priya Sharma</h4>
+              <span>Patient</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Testimonial Card 2 -->
+      <div class="swiper-slide testimonial-card">
+        <div class="testimonial-content">
+          <p>"Excellent staff and fast service. Truly thankful for the support!"</p>
+          <div class="testimonial-author">
+            <img src="https://i.pravatar.cc/100?img=2" alt="Patient Photo" />
+            <div>
+              <h4>Rahul Verma</h4>
+              <span>Patient</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Testimonial Card 3 -->
+      <div class="swiper-slide testimonial-card">
+        <div class="testimonial-content">
+          <p>"Raghuvanshi Health Care is the best in town! Loved their hospitality."</p>
+          <div class="testimonial-author">
+            <img src="https://i.pravatar.cc/100?img=3" alt="Patient Photo" />
+            <div>
+              <h4>Anita Joshi</h4>
+              <span>Patient</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  const swiper = new Swiper(".testimonial-swiper", {
+    loop: true,
+    autoplay: {
+      delay: 5000,
+      disableOnInteraction: false,
+    },
+    grabCursor: true,
+    spaceBetween: 30,
+    slidesPerView: 1,
+    breakpoints: {
+      640: { slidesPerView: 1 },
+      768: { slidesPerView: 2 },
+      1024: { slidesPerView: 3 },
+    }
+  });
+</script>
+  
 
 
 
