--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />hu
 
   <title>Raghuvanshi Health Care</title>
 
@@ -234,152 +234,6 @@
     </div>
   </div>
   
-<section class="partners-section">
-  <h2>Our Partners</h2>
-
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <!-- Partner 1 -->
-      <div class="swiper-slide">
-        <div class="partner-card">
-          <img src="https://via.placeholder.com/80x80?text=Logo1" alt="Partner 1"/>
-          <span>Partner One</span>
-        </div>
-      </div>
-
-      <!-- Partner 2 -->
-      <div class="swiper-slide">
-        <div class="partner-card">
-          <img src="https://via.placeholder.com/80x80?text=Logo2" alt="Partner 2"/>
-          <span>Partner Two</span>
-        </div>
-      </div>
-
-      <!-- Partner 3 -->
-      <div class="swiper-slide">
-        <div class="partner-card">
-          <img src="https://via.placeholder.com/80x80?text=Logo3" alt="Partner 3"/>
-          <span>Partner Three</span>
-        </div>
-      </div>
-
-      <!-- Partner 4 -->
-      <div class="swiper-slide">
-        <div class="partner-card">
-          <img src="https://via.placeholder.com/80x80?text=Logo4" alt="Partner 4"/>
-          <span>Partner Four</span>
-        </div>
-      </div>
-
-      <!-- Add more partners as needed -->
-    </div>
-  </div>
-</section>
-
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script>
-  const swiper = new Swiper('.mySwiper', {
-    slidesPerView: 1.3,
-    spaceBetween: 20,
-    loop: true,
-    speed: 700,
-    autoplay: {
-      delay: 2500,
-      disableOnInteraction: false,
-    },
-    grabCursor: true,
-    centeredSlides: false,
-    breakpoints: {
-      480: {
-        slidesPerView: 2.2,
-      },
-      768: {
-        slidesPerView: 3.2,
-      },
-      1024: {
-        slidesPerView: 4.2,
-      }
-    }
-  });
-</script>
-
-
-<!-- Testimonial Section -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-
-<section class="testimonial-section">
-  <h2>What Our Patients Say</h2>
-  <div class="swiper testimonial-swiper">
-    <div class="swiper-wrapper">
-
-      <!-- Testimonial Card 1 -->
-      <div class="swiper-slide testimonial-card">
-        <div class="testimonial-content">
-          <p>"The care and attention I received was beyond amazing. Highly recommended!"</p>
-          <div class="testimonial-author">
-            <img src="https://i.pravatar.cc/100?img=1" alt="Patient Photo" />
-            <div>
-              <h4>Priya Sharma</h4>
-              <span>Patient</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Testimonial Card 2 -->
-      <div class="swiper-slide testimonial-card">
-        <div class="testimonial-content">
-          <p>"Excellent staff and fast service. Truly thankful for the support!"</p>
-          <div class="testimonial-author">
-            <img src="https://i.pravatar.cc/100?img=2" alt="Patient Photo" />
-            <div>
-              <h4>Rahul Verma</h4>
-              <span>Patient</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Testimonial Card 3 -->
-      <div class="swiper-slide testimonial-card">
-        <div class="testimonial-content">
-          <p>"Raghuvanshi Health Care is the best in town! Loved their hospitality."</p>
-          <div class="testimonial-author">
-            <img src="https://i.pravatar.cc/100?img=3" alt="Patient Photo" />
-            <div>
-              <h4>Anita Joshi</h4>
-              <span>Patient</span>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script>
-  const swiper = new Swiper(".testimonial-swiper", {
-    loop: true,
-    autoplay: {
-      delay: 5000,
-      disableOnInteraction: false,
-    },
-    grabCursor: true,
-    spaceBetween: 30,
-    slidesPerView: 1,
-    breakpoints: {
-      640: { slidesPerView: 1 },
-      768: { slidesPerView: 2 },
-      1024: { slidesPerView: 3 },
-    }
-  });
-</script>
-  
-
-
 
     <section class="map-section">
     <div class="map-wrapper">
