--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />hu
-
-  <title>Raghuvanshi Health Care</title>
-
-  <!-- SEO -->
-  <meta name="description" content="Raghuvanshi Health Care - Trusted medical services and equipment.">
-  <meta name="author" content="Raghuvanshi Health Care">
-
-  <!-- Favicons -->
-  he following code in the <head> section of your pages:
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Raghuvanshi Healthcare</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Raghuvanshi " />
 <link rel="manifest" href="/site.webmanifest" />
-</head>
+  </head>
 <body>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="styles.css">
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Raghuvanshi Healthcare">
+            <img src="images/logo.jpg" alt="Raghuvanshi Healthcare">
         </div>
         <nav class="nav-links">
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">login/signup</a>
+            <a href="login.html">Signup/login</a>
         </nav>
         <div class="hamburger">
             <div></div>
@@ -39,7 +32,7 @@
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">login/sigunp</a>
+            <a href="login.html">Signup/login</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
@@ -119,7 +112,7 @@
         <a href="shop.html" class="action-btn">Buy Now</a>
       </div>
       <div class="service-img">
-        <img src="images/medical-equipment.jpg" alt="Medical Equipment">
+        <img src="imsges/medical-equipment.jpg" alt="Medical Equipment">
       </div>
     </div>
 
@@ -234,6 +227,222 @@
     </div>
   </div>
   
+<!-- Our Partners Section -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+<style>
+  .partners-section {
+    padding: 60px 20px;
+    background: linear-gradient(to bottom, #f9fafb, #ffffff);
+    height: 400px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .partners-section h2 {
+    font-size: 2.4rem;
+    color: #111827;
+    margin-bottom: 40px;
+    font-weight: 700;
+    position: relative;
+    display: inline-block;
+    animation: fadeInDown 0.8s ease-out;
+  }
+
+  .partners-section h2::after {
+    content: '';
+    width: 70px;
+    height: 4px;
+    background: #06b6d4;
+    display: block;
+    margin: 12px auto 0;
+    border-radius: 3px;
+    animation: expandBar 1s ease-out;
+  }
+
+  .swiper {
+    padding-bottom: 40px;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .swiper-slide {
+    display: flex;
+    justify-content: center;
+    transition: transform 0.3s ease;
+  }
+
+  .partner-card {
+    background: #ffffff;
+    border-radius: 18px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+    padding: 25px;
+    width: 190px;
+    height: 190px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.35s ease;
+    transform: scale(1);
+    cursor: pointer;
+    opacity: 0;
+    animation: fadeUp 0.8s ease forwards;
+  }
+
+  .swiper-slide:nth-child(1) .partner-card { animation-delay: 0.1s; }
+  .swiper-slide:nth-child(2) .partner-card { animation-delay: 0.2s; }
+  .swiper-slide:nth-child(3) .partner-card { animation-delay: 0.3s; }
+  .swiper-slide:nth-child(4) .partner-card { animation-delay: 0.4s; }
+
+  .partner-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.12);
+  }
+
+  .partner-card img {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    margin-bottom: 14px;
+    border-radius: 50%; /* Circular image */
+    filter: grayscale(40%);
+    transition: filter 0.3s ease, transform 0.3s ease;
+  }
+
+  .partner-card:hover img {
+    filter: none;
+    transform: scale(1.1);
+  }
+
+  .partner-card span {
+    font-weight: 600;
+    font-size: 1rem;
+    color: #111827;
+    transition: color 0.3s ease;
+  }
+
+  @media (max-width: 768px) {
+    .partner-card {
+      width: 140px;
+      height: 140px;
+      padding: 15px;
+    }
+
+    .partner-card img {
+      width: 55px;
+      height: 55px;
+    }
+
+    .partner-card span {
+      font-size: 0.9rem;
+    }
+  }
+
+  /* Animations */
+  @keyframes fadeInDown {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fadeUp {
+    0% {
+      opacity: 0;
+      transform: translateY(40px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes expandBar {
+    from {
+      width: 0;
+    }
+    to {
+      width: 70px;
+    }
+  }
+</style>
+
+<section class="partners-section">
+  <h2>Our Partners</h2>
+
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <!-- Partner 1 -->
+      <div class="swiper-slide">
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo1" alt="Partner 1"/>
+          <span>Partner One</span>
+        </div>
+      </div>
+
+      <!-- Partner 2 -->
+      <div class="swiper-slide">
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo2" alt="Partner 2"/>
+          <span>Partner Two</span>
+        </div>
+      </div>
+
+      <!-- Partner 3 -->
+      <div class="swiper-slide">
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo3" alt="Partner 3"/>
+          <span>Partner Three</span>
+        </div>
+      </div>
+
+      <!-- Partner 4 -->
+      <div class="swiper-slide">
+        <div class="partner-card">
+          <img src="https://via.placeholder.com/80x80?text=Logo4" alt="Partner 4"/>
+          <span>Partner Four</span>
+        </div>
+      </div>
+
+      <!-- Add more partners as needed -->
+    </div>
+  </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  const swiper = new Swiper('.mySwiper', {
+    slidesPerView: 1.3,
+    spaceBetween: 20,
+    loop: true,
+    speed: 700,
+    autoplay: {
+      delay: 2500,
+      disableOnInteraction: false,
+    },
+    grabCursor: true,
+    centeredSlides: false,
+    breakpoints: {
+      480: {
+        slidesPerView: 2.2,
+      },
+      768: {
+        slidesPerView: 3.2,
+      },
+      1024: {
+        slidesPerView: 4.2,
+      }
+    }
+  });
+</script>
+
+
+
 
     <section class="map-section">
     <div class="map-wrapper">
@@ -275,14 +484,14 @@
     <!-- Company Info -->
     <div style="flex: 1; min-width: 250px;">
       <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">Raghuvanshi Healthcare</h3>
-      <p>Empowering lives with reliable medical equipment and Services. We're committed to your health and care.</p>
+      <p>Empowering lives with reliable medical equipment and services. We're committed to your health and care.</p>
     </div>
 
     <!-- Navigation Links -->
     <div style="flex: 1; min-width: 200px;">
       <h4 style="margin-bottom: 1rem;">Company</h4>
       <ul style="list-style: none; padding: 0; line-height: 2;">
-        <li></li><a href="about.html" style="color: #fff; text-decoration: none;">About Us</a></li>
+        <a href="about.html" style="color: #fff; text-decoration: none;">About Us</a>   
         <li><a href="privacy.html" style="color: #fff; text-decoration: none;">Privacy Policy</a></li>
         <li><a href="terms.html" style="color: #fff; text-decoration: none;">Terms & Conditions</a></li>
         <li><a href="cookies.html" style="color: #fff; text-decoration: none;">Cookies Policy</a></li>
@@ -328,4 +537,4 @@
     &copy; 2025 Raghuvanshi Healthcare . All rights reserved.
   </div>
 </footer>
-      </html>
+</html>
