--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="manifest" href="/site.webmanifest" />
   </head>
 <body>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="index.css">
     <header>
         <div class="logo">
             <img src="images/logo.jpg" alt="Raghuvanshi Healthcare">
