--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta name="apple-mobile-web-app-title" content="Raghuvanshi " />
 <link rel="manifest" href="/site.webmanifest" />
   </head>
+</head>
 <body>
 <link rel="stylesheet" href="index.css">
     <header>
